--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
     </table>
 
     <hr />
-    <li><a href="Hobbies.html">My Hobbies</a></li>
-    <li><a href="Contact-Me.html"> Contact Me</a></li>
+    <li><a href="hobbies.html">My Hobbies</a></li>
+    <li><a href="contact-me.html"> Contact Me</a></li>
     <li><a href="Inputs.html">HTML Inputs</a></li>
   </body>
 </html>
